added image to html code

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <h1>Stock Level Checker</h1>
-  <p><img src="trainers.jpg" alt="Pair of trainers in size 7"></p>
+  <img src="trainers 1.jpg" alt="">
   <p>Selling trainers. The item is a pair of trainers in size 7. The shop starts with 50 pairs of trainers.</p>
 
   <label for="sold">Number of trainers sold:</label>
